# theory-of-computer-games

./: README.md
2048-with-TD(0)/: CMakeLists.txt  agent.h  episode.h  makefile
nogo-MCTS/: board.h  main.cpp  makefile  node.h
nogo-MCTS/test/: test_board.cpp  test_board.h  test_coordinator.cpp  test_coordinator.h
project01/: action.py  agent.py  board.py  episode.py  statistic.py  threes.py  tree.py
project02/: CMakeLists.txt  action.h  agent.h  board.cpp  board.h  episode.h  expectminimax.cpp  expectminimax.h  makefile  statistic.h  threes  threes.cpp  weight.h
project03/: CMakeLists.txt  board.cpp  board.h
project04/: CMakeLists.txt  Episode.cpp  Episode.h  MCTS.h  agent.cpp  agent.h  bit_board.h  board.cpp  board.h  coordinator.cpp  coordinator.h  episode.cpp  global.h  helper.cpp  helper.h  main.cpp  mcts.cpp  mcts.h  node.cpp  node.h  test.cpp  test.h
project04/test/: test_coordinator.cpp
project05/: .gitignore  CMakeLists.txt  MCTS.cpp  MCTS.h  bit_board.h  board.cpp  board.h  global.h  main.cpp  makefile  node.cpp  node.h
